<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@drawable/logo_48"
            android:drawablePadding="2dp"
            android:drawableStart="@drawable/logo_48"
            android:text="@string/app_name"
            android:textColor="@color/text_header_color"
            android:textSize="26sp"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/main_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/tab_all"
            style="@style/TabText"
            android:text="@string/now_showing"/>

        <View style="@style/TabDivider"/>

        <TextView
            android:id="@+id/tab_favourite"
            style="@style/TabText"
            android:text="@string/favourites"/>

    </LinearLayout>

    <View
        android:id="@+id/navigation_indicator"
        style="@style/TabNavIndicator"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
