<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/root_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <!-- Backdrop Image -->
            <ImageView
                android:id="@+id/backdrop_img"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"/>
            <!-- Poster and Title (Year) TODO: use palette color -->
            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/navy_blue">

                <ImageView
                    android:id="@+id/poster_img"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/poster_img"
                    android:layout_toRightOf="@id/poster_img"
                    android:textColor="@color/transparent_white_50"
                    android:textSize="22sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tagline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/poster_img"
                    android:layout_toRightOf="@id/poster_img"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>
            </RelativeLayout>

            <!-- Info | Similar | Favor -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="2dp">

                <ImageView
                    android:id="@+id/info_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:padding="5dp"
                    android:src="@drawable/movie_info_selector"/>

                <View style="@style/TabDivider"/>

                <ImageView
                    android:id="@+id/similar_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:padding="5dp"
                    android:src="@drawable/movie_similar_selector"/>

                <View style="@style/TabDivider"/>

                <ImageView
                    android:id="@+id/favor_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:padding="5dp"
                    android:src="@drawable/movie_favor_selector"/>
            </LinearLayout>

            <!-- Overview -->
            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textSize="15sp"/>

            <!-- TODO: Released, Runtime, Genres, Budget, Revenue, Language -->
            <!-- TODO: ViewStub Trailers -->

            <!-- Related Movies -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/related_movies"
                android:textSize="20sp"/>

            <GridView
                android:id="@+id/related_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:horizontalSpacing="6dp"
                android:numColumns="3"
                android:stretchMode="columnWidth"
                android:verticalSpacing="6dp"/>

            <TextView
                android:id="@+id/empty_grid_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/no_related_movie"
                android:textSize="14sp"
                android:visibility="gone"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/footer_height"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/action_settings"/>
        </FrameLayout>
    </RelativeLayout>
</ScrollView>
